# nyc-schools-agentic

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: main.yml
app/: config.py  data.py  main.py
app/mcp_server/: __init__.py  server.py
app/services/: analytics.py  models.py  schools.py  zoning.py
app/web/: charts.py  routes.py
app/web/templates/: base.html  find.html  neighborhood.html  school.html  search.html  sources.html  zoned.html
app/web/templates/partials/: borough_grid.html  leaderboard.html  neighborhood_leaderboard.html  peer_cohort.html  results.html
data/: co-locations.csv  data.sqlite  hs-directory.feather  nta-2010.geojson  school-locations.geojson  school-zones-es.geojson  school-zones-ms.geojson
docs/: webmcp-kickoff.md  webmcp-task.md
scripts/: build_db.py  fetch_data.py  find_school.py  inspect_school.py
tests/: conftest.py  test_analytics.py  test_helpers.py  test_mcp_server.py  test_routes.py  test_services.py  test_webmcp.py  test_zoning.py
