[project]
name = "nyc-report-card"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "nycschools",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
]

[tool.uv.sources]
nycschools = { path = "../nycschools", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
