[project]
name = "nyc-report-card"
version = "0.1.0"
requires-python = ">=3.10"
# Runtime deps the FastAPI app actually needs. nycschools is intentionally NOT
# here — the running app reads from the committed data/data.sqlite, not from
# upstream loaders. nycschools is only used by build-time scripts and lives
# in the [build] dependency group below.
dependencies = [
    "fastapi>=0.128.8",
    "fastmcp>=3.2,<4",
    "geopandas>=1.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=2.0.0",
    "pyarrow>=15.0",  # pandas needs this to read data/hs-directory.feather
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.0",
    "uvicorn[standard]>=0.39.0",
]

[tool.uv.sources]
nycschools = { path = "../nycschools", editable = true }

[dependency-groups]
# Dev = test deps. Plain `uv sync` (without --no-dev) installs these too, but
# they're not pulled in for production deployment via `uv sync --no-dev`.
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]
# Build = data-pipeline deps used only by scripts/fetch_data.py and
# scripts/build_db.py. Includes the upstream nycschools fork for reading
# raw upstream sources. Install with `uv sync --group build`.
build = [
    "nycschools",
    "py7zr>=1.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
